--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,13 @@
 analyzer:
   errors:
     use_build_context_synchronously: ignore
+    prefer_const_constructors: ignore
+    avoid_unnecessary_containers: ignore
+    unnecessary_brace_in_string_interps: ignore
+    sized_box_for_whitespace: ignore
+    library_private_types_in_public_api: ignore
+    invalid_return_type_for_catch_error: ignore
+    avoid_print: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
