--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   flutter_launcher_icons: "^0.13.1"
+  font_awesome_flutter: ^10.7.0
 
 flutter_launcher_icons:
   android: "ic_launcher"
