--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -17,6 +17,8 @@ analyzer:
     library_private_types_in_public_api: ignore
     invalid_return_type_for_catch_error: ignore
     avoid_print: ignore
+    file_names: ignore
+    non_constant_identifier_names: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
