--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.14
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +40,9 @@ dependencies:
   intl: ^0.19.0
   flutter_launcher_icons: "^0.13.1"
   font_awesome_flutter: ^10.7.0
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  provider: ^6.1.2
 
 flutter_launcher_icons:
   android: "ic_launcher"
